# necko-xray

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose-dev.yml  docker-compose.yml  install.sh  necko-xray
.github/workflows/: ci.yml
config/: xray-core.json
profiles/: example.json
scripts/: install.sh  update-proto.sh
src/: cli.rs  core.rs  daemon.rs  datetime.rs  lib.rs  main.rs  proto.rs  xray.rs  xray_core.rs
src/api/: daemon.rs  mod.rs
src/api/daemon/: lock.rs  mod.rs
src/config/: mod.rs
src/data/: mod.rs
src/data/postgres/: mod.rs  types.rs  users.rs
