[package]
name = "necko-xray"
version = "1.0.1"
edition = "2024"
license = "MIT"
authors = ["necko1 <@everyonehio on Telegram>"]

[dependencies]
tokio = { version = "1", features = [
    "process", "rt", "macros", "signal", "rt-multi-thread", "net", "io-util"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }