[package]
name = "necko-xray"
version = "1.0.2"
edition = "2024"

license = "MIT"
authors = ["necko1 <@everyonehio on Telegram>"]
description = "A lightweight CLI/TUI xray-core wrapper AKA. Control Panel, written on rust"
readme = "README.md"
keywords = ["xray", "vpn", "proxy", "panel", "xtls"]
repository = "https://github.com/Necko1/necko-xray"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
tokio = { version = "1", features = [
    "process", "rt", "macros", "signal", "rt-multi-thread", "net", "io-util"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }

tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"